[package]
name = "databend-benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "benchmark-cloud"
path = "src/bin/benchmark_cloud.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
databend-driver = "0.34.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1"

[workspace]
