[package]
name = "bendsql"
description = "Databend Native Command Line Tool"
categories = ["database"]
keywords = ["databend", "database", "cli"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }

anyhow = "1.0.75"
async-trait = "0.1.68"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.4", features = ["derive", "env"] }
comfy-table = "7.0.1"
csv = "1.2.2"
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
humantime-serde = "1.1.1"
indicatif = "0.17.5"
itertools = "0.10.5"
logos = "0.13.0"
once_cell = "1.18.0"
rustyline = "11.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
shlex = "1.1.0"
sqlformat = "0.2.1"
strum = "0.25.0"
strum_macros = "0.25.0"
terminal_size = "0.2.6"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
toml = "0.7.4"
unicode-segmentation = "1.10.1"
url = { version = "2.4.0", default-features = false }

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "gitcl"] }

[[bin]]
name = "bendsql"
path = "src/main.rs"
doctest = false
test = false
