[package]
name = "bendsql"
description = "Databend Native Command Line Tool"
categories = ["database"]
keywords = ["databend", "database", "cli"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.3", features = ["derive", "env"] }
comfy-table = "7.0"
csv = "1.2"
indicatif = "0.17"
logos = "0.13"
once_cell = "1.18"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
sqlformat = "0.2"
strum = "0.25"
strum_macros = "0.25"
terminal_size = "0.2"
tokio = { version = "1.28", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
tokio-stream = "0.1"
toml = "0.7"
unicode-segmentation = "1.10"
url = { version = "2.4", default-features = false }

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gix"] }

[[bin]]
name = "bendsql"
path = "src/main.rs"
doctest = false
test = false
