[package]
name = "bendsql"
description = "Databend Native Command Line Tool"
categories = ["database"]
keywords = ["databend", "database", "cli"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
databend-client = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }

anyhow = "1.0"
async-recursion = "1.1.0"
async-trait = "0.1"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7.1"
csv = "1.3"
databend-common-ast = "0.0.2"
fern = { version = "0.6", features = ["colored"] }
indicatif = "0.17"
log = "0.4"
once_cell = "1.18"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.3"
tokio = { version = "1.34", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
tokio-stream = "0.1"
toml = "0.8"
tracing-appender = "0.2"
unicode-segmentation = "1.10"
url = { version = "2.5", default-features = false }

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gix"] }

[[bin]]
name = "bendsql"
path = "src/main.rs"
doctest = false
test = false
