[package]
name = "databend-client"
description = "Databend Client for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]

[dependencies]
bytes = "1.4"
http = "0.2"
once_cell = "1.18"
percent-encoding = "2.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.28", features = ["macros"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7", features = ["io-util"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.4", default-features = false }
url = { version = "2.4", default-features = false }

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
