[package]
name = "databend-driver"
description = "Databend Driver for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["databend-client/rustls"]
# Enable native-tls for TLS support
native-tls = ["databend-client/native-tls"]

flight-sql = [
    "dep:arrow-flight",
    "dep:arrow-schema",
    "dep:tonic",
    "databend-sql/flight-sql",
]

[dependencies]
databend-client = { workspace = true }
databend-driver-macros = { workspace = true }
databend-sql = { workspace = true }

async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dyn-clone = "1.0"
futures = "0.3"
glob = "0.3"
http = "0.2"
percent-encoding = "2.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.28", features = ["macros"] }
tokio-stream = "0.1"
url = { version = "2.4", default-features = false }

arrow = { version = "46.0" }
arrow-flight = { version = "46.0", features = ["flight-sql-experimental"], optional = true }
arrow-schema = { version = "46.0", optional = true }
tonic = { version = "0.9", default-features = false, features = [
    "transport",
    "codegen",
    "tls",
    "tls-webpki-roots",
    "prost",
], optional = true }

[dev-dependencies]
