[package]
name = "databend-driver"
description = "Databend Driver for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["databend-client/rustls"]
# Enable native-tls for TLS support
native-tls = ["databend-client/native-tls"]

flight-sql = [
    "dep:arrow-flight",
    "dep:arrow-schema",
    "dep:tonic",
    "databend-sql/flight-sql",
]

[dependencies]
databend-client = { workspace = true }
databend-driver-macros = { workspace = true }
databend-sql = { workspace = true }

async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-trait = "0.1"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
csv = "1.3"
dyn-clone = "1.0"
glob = "0.3"
log = "0.4"
once_cell = "1.18"
percent-encoding = "2.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = ["macros"] }
tokio-stream = "0.1"
url = { version = "2.5", default-features = false }

arrow = { version = "51.0" }
arrow-flight = { version = "51.0", features = ["flight-sql-experimental"], optional = true }
arrow-schema = { version = "51.0", optional = true }
tonic = { version = "0.11", default-features = false, features = [
    "transport",
    "codegen",
    "tls",
    "tls-webpki-roots",
    "prost",
], optional = true }

[dev-dependencies]
