[package]
name = "databend-driver"
description = "Databend Driver for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["databend-client/rustls"]
# Enable native-tls for TLS support
native-tls = ["databend-client/native-tls"]

flight-sql = [
    "dep:arrow-flight",
    "dep:arrow-schema",
    "dep:tonic",
    "databend-driver-core/flight-sql",
]

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
databend-client = { workspace = true }
databend-driver-core = { workspace = true }
databend-driver-macros = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }

async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-trait = "0.1"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
csv = "1.3"
dyn-clone = "1.0"
glob = "0.3"
log = "0.4"
once_cell = "1.18"
percent-encoding = "2.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = ["macros"] }
url = { version = "2.5", default-features = false }

[dev-dependencies]
