[package]
name = "kvlocal"
version = "0.1.0"
description = "distributed meta data service"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[features]

[dependencies]
# Workspace dependencies
common-exception = {path = "../common/exception"}
common-metatypes = {path = "../common/metatypes"}
common-raft-store = {path = "../common/raft-store"}
common-runtime = {path = "../common/runtime"}
common-sled-store = {path = "../common/sled-store"}
common-store-api = {path = "../common/store-api"}
common-tracing = {path = "../common/tracing"}

metasrv = {path = "../metasrv"}


# Crates.io dependencies
async-trait = "0.1"
tempfile = "3.2.0"


[dev-dependencies]
pretty_assertions = "0.7"

