[package]
name = "databend-driver-macros"
description = "Macros for Databend Driver"
categories = ["database"]
keywords = ["databend", "database", "macros"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
