[package]
name = "databend-meta"
version = "0.1.0"
description = "distributed meta data service"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
doctest = false
test = false

[[bin]]
name = "databend-meta"
path = "src/bin/metasrv.rs"
doctest = false
test = false

[features]
default = ["simd"]
simd = ["common-arrow/simd"]
tokio-console = ["common-tracing/console", "common-base/tracing"]

[dependencies]
# Workspace dependencies
common-arrow = { path = "../common/arrow" }
common-base = { path = "../common/base" }
common-containers = { path = "../common/containers" }
common-exception = { path = "../common/exception" }
common-grpc = { path = "../common/grpc" }
common-macros = { path = "../common/macros" }
common-meta-api = { path = "../common/meta/api" }
common-meta-grpc = { path = "../common/meta/grpc" }
common-meta-raft-store = { path = "../common/meta/raft-store" }
common-meta-sled-store = { path = "../common/meta/sled-store" }
common-meta-types = { path = "../common/meta/types" }
common-metrics = { path = "../common/metrics" }
common-tracing = { path = "../common/tracing" }

# Github dependencies
sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1", default-features = false }

# Crates.io dependencies
anyerror = "0.1.4"
anyhow = "1.0.55"
async-trait = "0.1.52"
clap = { version = "3.1.3", features = ["derive", "env"] }
futures = "0.3.21"
metrics = "0.18.0"
num = "0.4.0"
poem = { version = "1.3.6", features = ["rustls"] }
prost = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
tokio-stream = "0.1.8"
tonic = { version = "0.6.2", features = ["tls"] }
tonic-reflection = "0.3.0"

[dev-dependencies]
common-meta-api = { path = "../common/meta/api" }
maplit = "1.0.2"
regex = "1.5.5"
pretty_assertions = "1.1.0"
reqwest = { version = "0.11.9", features = ["json"] }
